--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,19 @@
   font-weight: 400;
   font-style: normal;
 }
-.word-spacing{
+.word-spacing {
   word-spacing: 0.7rem;
+}
+
+.radial-gradient-purple {
+  background: radial-gradient(
+    circle,
+    rgba(164, 0, 169, 0.6) 20%,
+    rgba(1, 4, 37, 0.3) 60%,
+    rgba(1, 4, 37, 0) 100%
+  );
+  border-radius: 50%;
+  height: 100%;
+  width: 100%;
+  filter: blur(50px);
 }
