--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,19 @@
   filter: blur(50px);
 }
 
+.radial-gradient-purple2 {
+  background: radial-gradient(
+    circle,
+    rgba(164, 0, 169, 0.6) 20%,
+    rgba(1, 4, 37, 0.3) 60%,
+    rgba(1, 4, 37, 0) 100%
+  );
+  border-radius: 50%;
+  height: 175%;
+  width: 175%;
+  filter: blur(50px);
+}
+
 .scrollbar-x::-webkit-scrollbar {
   display: none;
 }
