--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Benz Grotesk";
-  src: url("/public/fonts/darker/Benz Grotesk.woff2") format("woff2");
+  src: url("/fonts/darker/Benz Grotesk.woff2") format("woff2");
   font-weight: 700;
   font-style: normal;
 }
