--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,10 @@
   font-style: normal;
 }
 
+*{
+  scroll-behavior: smooth;
+}
+
 .benz-grotesk {
   font-family: "Benz Grotesk", sans-serif;
   font-weight: 850;
@@ -61,5 +65,49 @@
 .scrollbar-x::-webkit-scrollbar {
   display: none;
 }
+.rounded-full {
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+}
 
-/* animate-moveInfinite */
+
+/* .gradient-button {
+  background-color: #0b7b54; 
+  border-radius: 5px;
+  padding: 10px 20px;
+  color: #fff;
+  font-weight: bold;
+  text-transform: uppercase;
+  cursor: pointer;
+ 
+  border-image: linear-gradient(to right, #f8f6f6, #6bab62) 2;
+  border-width: 2px;
+} */
+
+/* .gradient-border {
+  width: 192px;  
+  height: 113px;  
+  background: conic-gradient(
+    from "90deg",
+    white,
+    rgba(249, 250, 249, 0.5),
+    white,
+    rgba(250, 251, 250, 0.5),
+    white
+  );
+  
+  mask: radial-gradient(white 75%, transparent 100%);
+  -webkit-mask: radial-gradient(white 75%, transparent 100%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+}
+
+.content {
+  width: 190px; 
+  height: 110px;
+  background: #39d05a;  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+} */
