--- a/src/App.css
+++ b/src/App.css
@@ -69,45 +69,11 @@
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-
-/* .gradient-button {
-  background-color: #0b7b54; 
-  border-radius: 5px;
-  padding: 10px 20px;
-  color: #fff;
-  font-weight: bold;
-  text-transform: uppercase;
-  cursor: pointer;
- 
-  border-image: linear-gradient(to right, #f8f6f6, #6bab62) 2;
-  border-width: 2px;
-} */
-
-/* .gradient-border {
-  width: 192px;  
-  height: 113px;  
-  background: conic-gradient(
-    from "90deg",
-    white,
-    rgba(249, 250, 249, 0.5),
-    white,
-    rgba(250, 251, 250, 0.5),
-    white
-  );
-  
-  mask: radial-gradient(white 75%, transparent 100%);
-  -webkit-mask: radial-gradient(white 75%, transparent 100%);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
+.no-scrollbar {
+  scrollbar-width: none; /* For Firefox */
+  -ms-overflow-style: none; /* For IE and Edge */
 }
 
-.content {
-  width: 190px; 
-  height: 110px;
-  background: #39d05a;  
-  display: flex;
-  align-items: center;
-  justify-content: center;
-} */
+.no-scrollbar::-webkit-scrollbar {
+  display: none; /* For Chrome, Safari, and Opera */
+}
